# stomp

./: .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  README.md  colcon.pkg  dependencies.rosinstall  doxygen.config  example_pages.dox  mainpage.dox  package.xml
.github/workflows/: bionic_build.yml  clang_format.yml  cmake_format.yml  focal_build.yml  windows_noetic_build.yml
cmake/: stomp-config.cmake.in
examples/: simple_optimization_task.h  stomp_example.cpp
include/stomp/: stomp.h  task.h  utils.h
src/: stomp.cpp  utils.cpp
test/: CMakeLists.txt  stomp_3dof.cpp  utest.cpp
