<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>stomp</name>
  <version>0.1.1</version>
  <description>This package  provides the STOMP (Stochastic Trajectory Optimization for Motion Planning) algorithm that can be used for robot motion planning tasks or other similar optimization tasks</description>
  <author>Jorge Nicho</author>
  <maintainer email="jrgnichodevel@gmail.com">Jorge Nicho</maintainer>
  <license>Apache 2.0</license>

  <url type="website">http://wiki.ros.org/stomp</url>

  <!-- Following recommendations of REP 136 -->
  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>

  <depend>libconsole-bridge-dev</depend>

  <test_depend>gtest</test_depend>

  <export>
    <build_type>cmake</build_type>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
